--- a/src/com/arcon/ui/view/MainFrame.form
+++ b/src/com/arcon/ui/view/MainFrame.form
@@ -1,54 +1,167 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.arcon.ui.view.MainFrame">
-  <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="412ae" binding="panelLeft" layout-manager="BorderLayout" hgap="0" vgap="0">
-        <constraints border-constraint="West"/>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
-      <grid id="2d019" binding="panelRight" layout-manager="BorderLayout" hgap="0" vgap="0">
-        <constraints border-constraint="East"/>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
-      <grid id="44d7b" binding="panelCenter" layout-manager="BorderLayout" hgap="0" vgap="0">
-        <constraints border-constraint="Center"/>
+      <tabbedpane id="d387e" binding="tabbedPane1" default-binding="true">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="200"/>
+          </grid>
+        </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="19a77" class="javax.swing.JButton" binding="buttonOk">
-            <constraints border-constraint="East"/>
+          <grid id="f6a6f" binding="tabPanelMain" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints>
+              <tabbedpane title="Card Reader"/>
+            </constraints>
             <properties>
-              <text value="Button"/>
+              <toolTipText value=""/>
             </properties>
-          </component>
-        </children>
-      </grid>
-      <grid id="4a604" binding="panelTop" layout-manager="BorderLayout" hgap="0" vgap="0">
-        <constraints border-constraint="North"/>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <toolbar id="83a68" binding="toolMenuBar">
-            <constraints border-constraint="Center"/>
+            <border type="none"/>
+            <children>
+              <component id="4c3a7" class="javax.swing.JTextField" binding="textFieldCard">
+                <constraints border-constraint="North"/>
+                <properties/>
+              </component>
+              <component id="ab2b5" class="javax.swing.JButton" binding="buttonPerformCard">
+                <constraints border-constraint="South"/>
+                <properties>
+                  <enabled value="true"/>
+                  <text value="Perform"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="989ad" binding="tabPanelIO" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Input/Output"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="84009" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Password"/>
+                </properties>
+              </component>
+              <component id="47e44" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Cash"/>
+                </properties>
+              </component>
+              <component id="d591" class="javax.swing.JTextField" binding="textFieldCash">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="f09b" class="javax.swing.JRadioButton" binding="radioButtonOutput">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Output"/>
+                </properties>
+              </component>
+              <component id="376e7" class="javax.swing.JRadioButton" binding="radioButtonInput">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Input"/>
+                </properties>
+              </component>
+              <component id="28fc6" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Comment"/>
+                </properties>
+              </component>
+              <component id="d5e2a" class="javax.swing.JButton" binding="buttonIOAction">
+                <constraints>
+                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Perform"/>
+                </properties>
+              </component>
+              <component id="9d3d6" class="javax.swing.JTextArea" binding="textAreaComment">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="a9f63" class="javax.swing.JPasswordField" binding="passwordFieldPassword">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+            </children>
+          </grid>
+          <grid id="d9136" binding="tabPanelOptions" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Options"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <hspacer id="bdf86">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
+              <component id="a1b65" class="javax.swing.JButton" binding="changePriceButton" default-binding="true">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Change Price"/>
+                </properties>
+              </component>
+              <component id="972fa" class="javax.swing.JButton" binding="buttonCangeUser">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Change User"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="f18b2" binding="tabPanelLog" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints>
+              <tabbedpane title="Log"/>
+            </constraints>
             <properties/>
             <border type="none"/>
             <children/>
-          </toolbar>
-          <component id="49b64" class="javax.swing.JTextField" binding="textFieldCardId">
-            <constraints border-constraint="South"/>
-            <properties/>
-          </component>
+          </grid>
         </children>
-      </grid>
+      </tabbedpane>
     </children>
   </grid>
 </form>
