--- a/src/com/arcon/ui/view/MainFrame.form
+++ b/src/com/arcon/ui/view/MainFrame.form
@@ -123,7 +123,10 @@
                     <constraints>
                       <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <lightWeightPopupEnabled value="true"/>
+                      <maximumRowCount value="10"/>
+                    </properties>
                   </component>
                   <component id="3e571" class="javax.swing.JLabel">
                     <constraints>
