--- a/src/com/arcon/ui/view/MainFrame.form
+++ b/src/com/arcon/ui/view/MainFrame.form
@@ -61,7 +61,7 @@
               <text value="Perform"/>
             </properties>
           </component>
-          <grid id="d77c9" binding="tabPanelMainSource" layout-manager="GridLayoutManager" row-count="7" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="d77c9" binding="tabPanelMainSource" layout-manager="GridLayoutManager" row-count="8" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints border-constraint="Center"/>
             <properties>
@@ -69,13 +69,13 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="bddb3" class="javax.swing.JLabel">
+              <component id="bddb3" class="javax.swing.JLabel" binding="labelTextTimeIn">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Time In:"/>
-                  <visible value="false"/>
+                  <visible value="true"/>
                 </properties>
               </component>
               <component id="9e009" class="javax.swing.JLabel" binding="jLabelTimeIn">
@@ -86,7 +86,7 @@
                   <text value="00hour:00min:00sec"/>
                 </properties>
               </component>
-              <component id="1b260" class="javax.swing.JLabel">
+              <component id="1b260" class="javax.swing.JLabel" binding="labelTextTimeOut">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -102,7 +102,7 @@
                   <text value="00hour:00min:00sec"/>
                 </properties>
               </component>
-              <component id="3ba1e" class="javax.swing.JLabel">
+              <component id="3ba1e" class="javax.swing.JLabel" binding="labelTextTimeTotal">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -120,7 +120,7 @@
               </component>
               <component id="29103" class="javax.swing.JSeparator">
                 <constraints>
-                  <grid row="0" column="2" row-span="7" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="2" row-span="8" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <orientation value="1"/>
@@ -138,7 +138,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="ca390" class="javax.swing.JLabel">
+              <component id="ca390" class="javax.swing.JLabel" binding="labelTextDiscount">
                 <constraints>
                   <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -156,12 +156,12 @@
                   <maximumRowCount value="10"/>
                 </properties>
               </component>
-              <component id="3e571" class="javax.swing.JLabel">
+              <component id="def2c" class="javax.swing.JCheckBox" binding="checkBoxDiscount">
                 <constraints>
-                  <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Price:"/>
+                  <text value=""/>
                 </properties>
               </component>
               <component id="8a699" class="javax.swing.JLabel" binding="jLabelPrice">
@@ -172,7 +172,15 @@
                   <text value="00 UAH"/>
                 </properties>
               </component>
-              <component id="469c8" class="javax.swing.JLabel">
+              <component id="3e571" class="javax.swing.JLabel" binding="labelTextPrice">
+                <constraints>
+                  <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Price:"/>
+                </properties>
+              </component>
+              <component id="469c8" class="javax.swing.JLabel" binding="labelTextCash">
                 <constraints>
                   <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -188,12 +196,12 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="def2c" class="javax.swing.JCheckBox" binding="checkBoxDiscount">
+              <component id="744b6" class="javax.swing.JButton" binding="buttonCancel">
                 <constraints>
-                  <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="6" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value=""/>
+                  <text value="Cancel"/>
                 </properties>
               </component>
             </children>
