--- a/src/com/arcon/ui/view/MainFrame.form
+++ b/src/com/arcon/ui/view/MainFrame.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.arcon.ui.view.MainFrame">
   <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="523" height="400"/>
+      <xy x="20" y="20" width="538" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -53,13 +53,6 @@
           <component id="4c3a7" class="javax.swing.JTextField" binding="textFieldCard">
             <constraints border-constraint="North"/>
             <properties/>
-          </component>
-          <component id="ab2b5" class="javax.swing.JButton" binding="buttonPerformCard">
-            <constraints border-constraint="South"/>
-            <properties>
-              <enabled value="true"/>
-              <text value="Perform"/>
-            </properties>
           </component>
           <grid id="d77c9" binding="tabPanelMainSource" layout-manager="GridLayoutManager" row-count="8" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
@@ -196,9 +189,18 @@
                 </constraints>
                 <properties/>
               </component>
+              <component id="ab2b5" class="javax.swing.JButton" binding="buttonPerformCard">
+                <constraints>
+                  <grid row="7" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <enabled value="true"/>
+                  <text value="Perform"/>
+                </properties>
+              </component>
               <component id="744b6" class="javax.swing.JButton" binding="buttonCancel">
                 <constraints>
-                  <grid row="6" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="7" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Cancel"/>
