--- a/src/com/arcon/ui/view/MainFrame.form
+++ b/src/com/arcon/ui/view/MainFrame.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.arcon.ui.view.MainFrame">
   <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="538" height="400"/>
+      <xy x="20" y="20" width="626" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -35,9 +35,21 @@
               <text value="Log"/>
             </properties>
           </component>
+          <component id="f1575" class="javax.swing.JLabel" binding="labelTextMoney">
+            <constraints/>
+            <properties>
+              <text value="Money: "/>
+            </properties>
+          </component>
+          <component id="f55a0" class="javax.swing.JLabel" binding="jLabelMoney">
+            <constraints/>
+            <properties>
+              <text value="0"/>
+            </properties>
+          </component>
         </children>
       </toolbar>
-      <grid id="f6a6f" binding="PanelMain" layout-manager="BorderLayout" hgap="0" vgap="0">
+      <grid id="f6a6f" binding="mainPanelCenter" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints border-constraint="Center"/>
         <properties>
           <toolTipText value=""/>
@@ -63,14 +75,6 @@
                 <properties>
                   <text value="Time In:"/>
                   <visible value="true"/>
-                </properties>
-              </component>
-              <component id="9e009" class="javax.swing.JLabel" binding="jLabelTimeIn">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="00hour:00min:00sec"/>
                 </properties>
               </component>
               <component id="1b260" class="javax.swing.JLabel" binding="labelTextTimeOut">
@@ -125,32 +129,6 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="ca390" class="javax.swing.JLabel" binding="labelTextDiscount">
-                <constraints>
-                  <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Discount:"/>
-                </properties>
-              </component>
-              <component id="9181d" class="javax.swing.JComboBox" binding="comboBoxDiscount">
-                <constraints>
-                  <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <enabled value="false"/>
-                  <lightWeightPopupEnabled value="true"/>
-                  <maximumRowCount value="10"/>
-                </properties>
-              </component>
-              <component id="def2c" class="javax.swing.JCheckBox" binding="checkBoxDiscount">
-                <constraints>
-                  <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value=""/>
-                </properties>
-              </component>
               <component id="8a699" class="javax.swing.JLabel" binding="jLabelPrice">
                 <constraints>
                   <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -200,8 +178,72 @@
                   <text value="Cancel"/>
                 </properties>
               </component>
+              <component id="9e009" class="javax.swing.JLabel" binding="jLabelTimeIn">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="00hour:00min:00sec"/>
+                </properties>
+              </component>
+              <component id="9181d" class="javax.swing.JComboBox" binding="comboBoxDiscount">
+                <constraints>
+                  <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <enabled value="false"/>
+                  <lightWeightPopupEnabled value="true"/>
+                  <maximumRowCount value="10"/>
+                </properties>
+              </component>
+              <component id="ca390" class="javax.swing.JLabel" binding="labelTextDiscount">
+                <constraints>
+                  <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Discount:"/>
+                </properties>
+              </component>
+              <component id="def2c" class="javax.swing.JCheckBox" binding="checkBoxDiscount">
+                <constraints>
+                  <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value=""/>
+                </properties>
+              </component>
             </children>
           </grid>
+        </children>
+      </grid>
+      <grid id="c533f" binding="mainPanelSouth" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints border-constraint="South"/>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="88ef0" class="javax.swing.JLabel" binding="labelTextTotalCard">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Total Cards: "/>
+            </properties>
+          </component>
+          <hspacer id="2ce3b">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <component id="d1284" class="javax.swing.JLabel" binding="jLabelTotalCards">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <horizontalAlignment value="0"/>
+              <text value="0"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
