--- a/src/com/arcon/ui/view/IOFrame.form
+++ b/src/com/arcon/ui/view/IOFrame.form
@@ -166,6 +166,14 @@
               <orientation value="1"/>
             </properties>
           </component>
+          <component id="638e9" class="javax.swing.JLabel" binding="labelTransactionMethod">
+            <constraints>
+              <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="SELECT!"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
